Layout/l10n: Fix minor visual issues
- The text in the entry didn't fit in some languages
- In the absence of flags, the text in the entry was stuck to the left border
- Some msgids could be improved

--- a/src/cinnamon-screensaver-gtk3.18.css
+++ b/src/cinnamon-screensaver-gtk3.18.css
@@ -96,7 +96,7 @@
     background-image: none;
     background-color: transparent;
     border-width: 1px;
-    padding: 5px 10px 5px 0px;
+    padding: 5px 10px 5px 5px;
 }
 
 .csstage .passwordentry:focused {
@@ -126,7 +126,7 @@
 }
 
 .csstage .passwordentry.image.left {
-    padding: 0 20px 0 5px;
+    padding: 0 15px 0 5px;
 }
 
 .csstage .transparentbutton {
